Github action Valgrind

--- a/README.Rmd
+++ b/README.Rmd
@@ -10,6 +10,7 @@ library(intmap)
 
 <!-- badges: start -->
 [![R-CMD-check](https://github.com/stla/intmap/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/stla/intmap/actions/workflows/R-CMD-check.yaml)
+[![R-CMD-check-valgrind](https://github.com/stla/intmap/actions/workflows/R-CMD-check-valgrind.yaml/badge.svg)](https://github.com/stla/intmap/actions/workflows/R-CMD-check-valgrind.yaml)
 <!-- badges: end -->
 
 *Ordered containers with integer keys.*
